# Unitone

./: .gitignore  .releaserc.json  AGENTS.md  LICENSE  README.md  README_ja.md  biome.json  lefthook.yml  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml  semantic-release.yml
assets/mac/: entitlements.mac.inherit.plist  entitlements.mac.plist
docs/: GITHUB_PAGES_SETUP.md  MACOS_SIGNING.md  asset-requirements.md  auto-update-plan.md  mac-publishing-guide.md  privacy-policy.md  security-audit.md  store-description.md  terms-of-service.md  windows-publishing-guide.md
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-harness-engineering-mvh.md
scripts/: generate-icons.js  notarize.js
src/: AiCompanionManager.js  EventManager.js  LoadingManager.js  PaneTreeManager.js  PresetPickerManager.js  ServiceDockManager.js  SettingsManager.js  UpdateManager.js  WebViewManager.js  chrome.html  chrome.js  index.html  renderer.js  styles.css  titlebar.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  layout.rs  lib.rs  main.rs  notification.rs  state.rs  store.rs  tray.rs  webview_manager.rs  webview_ops.rs
src/main/: ipc-handlers.js  main.js  security.js  store.js  tray.js  updater.js  window.js
src/preload/: preload.js  webview-preload.js
src/renderer/: AiCompanionManager.js  EventManager.js  LoadingManager.js  ServiceDockManager.js  SettingsManager.js  UpdateManager.js  WebViewManager.js  index.html  renderer.js  (+1 more)
